appId: com.biblememo.app
---
- clearState
- launchApp
- tapOn:
    text: Read
- tapOn:
    text: Books
- scrollUntilVisible:
    element: "66 books"
    direction: DOWN
