appId: com.biblememo.app
---
- launchApp
- tapOn:
    text: Read
- assertVisible: Genesis 1
- runFlow:
    when:
      visible:
        text: Genesis 1
    file: read-genesis-verses.yaml
- tapOn:
    text: Back
