appId: com.biblememo.app
---
- launchApp
- tapOn:
    text: Me
- assertVisible: Personalize your app and more
- tapOn:
    text: Back
